// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestSuite Variations openApiResponse content-types should handle wildcard content-type and generate multiple variations 1`] = `
Object {
  "_": Object {
    "postman_id": "cccccccc-cccc-cccc-cccc-cccccccccccc",
  },
  "event": Array [],
  "info": Object {
    "name": "Minimal CRM",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": undefined,
  },
  "item": Array [
    Object {
      "event": Array [],
      "name": "List companies",
      "request": Object {
        "header": Array [
          Object {
            "key": "x-apideck-consumer-id",
            "value": "test_consumer",
          },
          Object {
            "key": "x-apideck-app-id",
            "value": "2222",
          },
          Object {
            "key": "x-apideck-service-id",
            "value": "salesforce",
          },
        ],
        "method": "GET",
        "url": Object {
          "host": Array [
            "{{baseUrl}}",
          ],
          "path": Array [
            "crm",
            "companies",
          ],
          "query": Array [],
          "variable": Array [],
        },
      },
      "response": Array [],
    },
    Object {
      "event": Array [],
      "item": Array [
        Object {
          "event": Array [],
          "item": Array [
            Object {
              "event": Array [
                Object {
                  "listen": "test",
                  "script": Object {
                    "exec": Array [
                      "// Validate response status code 
pm.test(\\"[GET]::/crm/companies - Response status code is 200\\", function () {
    pm.expect(pm.response.code).to.equal(200);
});
",
                    ],
                    "type": "text/javascript",
                  },
                },
              ],
              "name": "List companies[WildcardContentType][application/json]",
              "request": Object {
                "header": Array [
                  Object {
                    "key": "x-apideck-consumer-id",
                    "value": "test_consumer",
                  },
                  Object {
                    "key": "x-apideck-app-id",
                    "value": "2222",
                  },
                  Object {
                    "key": "x-apideck-service-id",
                    "value": "salesforce",
                  },
                ],
                "method": "GET",
                "name": "List companies[WildcardContentType][application/json]",
                "url": Object {
                  "host": Array [
                    "{{baseUrl}}",
                  ],
                  "path": Array [
                    "crm",
                    "companies",
                  ],
                  "query": Array [],
                  "variable": Array [],
                },
              },
              "response": Array [],
            },
            Object {
              "event": Array [
                Object {
                  "listen": "test",
                  "script": Object {
                    "exec": Array [
                      "// Validate response status code 
pm.test(\\"[GET]::/crm/companies - Response status code is 200\\", function () {
    pm.expect(pm.response.code).to.equal(200);
});
",
                    ],
                    "type": "text/javascript",
                  },
                },
              ],
              "name": "List companies[WildcardContentType][text/plain]",
              "request": Object {
                "header": Array [
                  Object {
                    "key": "x-apideck-consumer-id",
                    "value": "test_consumer",
                  },
                  Object {
                    "key": "x-apideck-app-id",
                    "value": "2222",
                  },
                  Object {
                    "key": "x-apideck-service-id",
                    "value": "salesforce",
                  },
                ],
                "method": "GET",
                "name": "List companies[WildcardContentType][text/plain]",
                "url": Object {
                  "host": Array [
                    "{{baseUrl}}",
                  ],
                  "path": Array [
                    "crm",
                    "companies",
                  ],
                  "query": Array [],
                  "variable": Array [],
                },
              },
              "response": Array [],
            },
          ],
          "name": "Minimal CRM Variations",
        },
      ],
      "name": "Variation Tests",
    },
  ],
  "variable": Array [
    Object {
      "key": "baseUrl",
      "type": "any",
      "value": "https://unify.apideck.com",
    },
  ],
}
`;

exports[`TestSuite Variations openApiResponse content-types should use a specific content-type when multiple are available 1`] = `
Object {
  "_": Object {
    "postman_id": "cccccccc-cccc-cccc-cccc-cccccccccccc",
  },
  "event": Array [],
  "info": Object {
    "name": "Minimal CRM",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": undefined,
  },
  "item": Array [
    Object {
      "event": Array [],
      "name": "List companies",
      "request": Object {
        "header": Array [
          Object {
            "key": "x-apideck-consumer-id",
            "value": "test_consumer",
          },
          Object {
            "key": "x-apideck-app-id",
            "value": "2222",
          },
          Object {
            "key": "x-apideck-service-id",
            "value": "salesforce",
          },
        ],
        "method": "GET",
        "url": Object {
          "host": Array [
            "{{baseUrl}}",
          ],
          "path": Array [
            "crm",
            "companies",
          ],
          "query": Array [],
          "variable": Array [],
        },
      },
      "response": Array [],
    },
    Object {
      "event": Array [],
      "item": Array [
        Object {
          "event": Array [],
          "item": Array [
            Object {
              "event": Array [
                Object {
                  "listen": "test",
                  "script": Object {
                    "exec": Array [
                      "// Validate response status code 
pm.test(\\"[GET]::/crm/companies - Response status code is 200\\", function () {
    pm.expect(pm.response.code).to.equal(200);
});
",
                    ],
                    "type": "text/javascript",
                  },
                },
              ],
              "name": "List companies[SpecificContentType]",
              "request": Object {
                "header": Array [
                  Object {
                    "key": "x-apideck-consumer-id",
                    "value": "test_consumer",
                  },
                  Object {
                    "key": "x-apideck-app-id",
                    "value": "2222",
                  },
                  Object {
                    "key": "x-apideck-service-id",
                    "value": "salesforce",
                  },
                ],
                "method": "GET",
                "name": "List companies[SpecificContentType]",
                "url": Object {
                  "host": Array [
                    "{{baseUrl}}",
                  ],
                  "path": Array [
                    "crm",
                    "companies",
                  ],
                  "query": Array [],
                  "variable": Array [],
                },
              },
              "response": Array [],
            },
          ],
          "name": "Minimal CRM Variations",
        },
      ],
      "name": "Variation Tests",
    },
  ],
  "variable": Array [
    Object {
      "key": "baseUrl",
      "type": "any",
      "value": "https://unify.apideck.com",
    },
  ],
}
`;

exports[`TestSuite Variations should generateVariationTests for variations 1`] = `
Object {
  "_": Object {
    "postman_id": "cccccccc-cccc-cccc-cccc-cccccccccccc",
  },
  "event": Array [],
  "info": Object {
    "name": "Minimal CRM",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": undefined,
  },
  "item": Array [
    Object {
      "event": Array [],
      "name": "List companies",
      "request": Object {
        "header": Array [
          Object {
            "key": "x-apideck-consumer-id",
            "value": "test_consumer",
          },
          Object {
            "key": "x-apideck-app-id",
            "value": "2222",
          },
          Object {
            "key": "x-apideck-service-id",
            "value": "salesforce",
          },
        ],
        "method": "GET",
        "url": Object {
          "host": Array [
            "{{baseUrl}}",
          ],
          "path": Array [
            "crm",
            "companies",
          ],
          "query": Array [],
          "variable": Array [],
        },
      },
      "response": Array [],
    },
    Object {
      "event": Array [],
      "item": Array [],
      "name": "Variation Tests",
    },
  ],
  "variable": Array [
    Object {
      "key": "baseUrl",
      "type": "any",
      "value": "https://unify.apideck.com",
    },
  ],
}
`;
